# console-chat

./: LICENSE  README.md  pyrightconfig.json
.github/: dependabot.yml
api/: Dockerfile  datamodel.py  docker-compose.yml  listen.py  main.py  requirements.txt  valkey_test.py
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Improvements.md  README.md  docker-compose.yml  pytest.ini  requirements-dev.txt  requirements-frozen.txt  requirements.txt
backend-old/: .dockerignore  Dockerfile  docker-compose.yml  requirements-frozen.txt  requirements.txt
backend2/: Dockerfile  README.md  docker-compose.yml  requirements-dev.txt  requirements-frozen.txt  requirements.txt
console-chat/: .envrc  .gitignore  Cargo.toml  README.md  openapi.json
console-chat-event/: Cargo.toml  README.md
console-chat/.config/: config.json5
console-chat/console-chat-proc-macro/: Cargo.toml
console-chat/console-chat-proc-macro/src/: lib.rs  subsetable.rs
console-chat/examples/: basic_usage.rs  macro_test.rs  sse_room.rs  websocket.rs
console-chat/from-hashmap-macro/: Cargo.toml
console-chat/from-hashmap-macro/src/: lib.rs
console-chat/my-proc-macros/: Cargo.toml
console-chat/my-proc-macros/src/: from_hashmap.rs  lib.rs
console-chat/network/: Cargo.toml  README.md
console-chat/network/.openapi-generator/: FILES
console-chat/network/docs/: Content.md  CreateRoom.md  CreateRoomInviteInner.md  DeprecatedApi.md  Encrypted.md  KeyRequest.md  MessageSend.md  MessageType.md  Plaintext.md  RegisterData.md  RoomsApi.md  UpdateRoom.md  UsersApi.md
console-chat/network/src/apis/: deprecated_api.rs  rooms_api.rs  users_api.rs
console-chat/network/src/models/: create_room_invite_inner.rs  message_send.rs  message_type.rs  mod.rs  register_data.rs  room_level.rs  update_room.rs  user_public.rs  validation_error_loc_inner.rs
console-chat/openapi/: .openapi-generator-ignore  Cargo.toml  README.md
console-chat/openapi-custom/: Cargo.toml  README.md
console-chat/openapi-custom/examples/: basic_usage.rs  sse_room.rs  websocket.rs  websocket_random.rs
console-chat/openapi-custom/src/apis/: configuration.rs  default_api.rs  mod.rs  rooms_api.rs  users_api.rs
console-chat/openapi-custom/src/models/: appearance_public.rs  create_room.rs  create_room_invite_inner.rs  http_validation_error.rs  login_data.rs  message_type.rs  mod.rs  online_response.rs  plaintext.rs  room_level.rs  static_room_public.rs  system_message.rs  token.rs  update_room.rs  user_private.rs  user_public.rs  user_type.rs  validation_error.rs  validation_error_loc_inner.rs
console-chat/openapi-template/: Cargo.mustache  model.mustache
console-chat/openapi/.openapi-generator/: FILES
console-chat/openapi/docs/: AppearancePublic.md  Content.md  CreateRoom.md  DefaultApi.md  DeprecatedApi.md  Encrypted.md  ErrorModel.md  ExperimentalApi.md  HttpValidationError.md  Invite.md  InviteUsername.md  InviteUuid.md  InviteWrapper.md  KeyRequest.md  KeyResponse.md  LoginData.md  MessagePublic.md  MessagePublicContent.md  MessageSend.md  MessageSendContent.md  OnlineResponse.md  Plaintext.md  RoomLevel.md  RoomsApi.md  SseApi.md  StaticRoomPublic.md  SystemMessage.md  Token.md  UpdateRoom.md  UserPrivate.md  UserPublic.md  UserType.md  UsersApi.md  ValidationError.md
console-chat/openapi/examples/: basic_usage.rs  websocket.rs
console-chat/openapi/src/: lib.rs
console-chat/openapi/src/apis/: configuration.rs  default_api.rs  deprecated_api.rs  experimental_api.rs  mod.rs  rooms_api.rs  sse_api.rs  users_api.rs
console-chat/openapi/src/models/: appearance_public.rs  content.rs  create_room.rs  create_room_invite_inner.rs  encrypted.rs  error_model.rs  http_validation_error.rs  invite.rs  invite_username.rs  invite_uuid.rs  invite_wrapper.rs  key_request.rs  key_response.rs  login_data.rs  message_public.rs  message_public_content.rs  message_send.rs  message_send_content.rs  message_type.rs  mod.rs  online_response.rs  plaintext.rs  register_data.rs  room_level.rs  static_room_public.rs  system_message.rs  token.rs  update_room.rs  user_private.rs  user_public.rs  user_type.rs  validation_error.rs  validation_error_loc_inner.rs
console-chat/openapi/src/models2/: appearance_public.rs  key_response.rs  message_send.rs  plaintext.rs  system_message.rs  user_private.rs  validation_error.rs
console-chat/src/: action.rs  app.rs  cli.rs  components.rs  config.rs  custom_hashmap.rs  error.rs  errors.rs  event.rs  log.rs  logging.rs  main.rs  tui.rs  util.rs  utils.rs
console-chat/src/components/: account_management.rs  button.rs  chat.rs  editor.rs  error_display.rs  fps.rs  home.rs  join.rs  login.rs  settings.rs  static_room_management.rs  theme.rs  vim.rs
console-chat/src/components/settings/: chategory.rs  mode.rs
console-chat/src/components/ui_utils/: button.rs  dialog.rs  list.rs  mod.rs  select.rs  table.rs  theme.rs  vim.rs
console-chat/src/components/ui_utils/theme/: defaults.rs  mod.rs  theme.rs  theme2.rs
console-chat/src/network/: client.rs  encryption.rs  error.rs  listen.rs  listen_thread.rs  message.rs  misc_thread.rs  mod.rs  network.rs  network_stack.rs  old.rs  user.rs
console-chat/src/network/data_model/: base_message.rs  client_messages.rs  message_data.rs  messages.rs  mod.rs  server_messages.rs  user.rs
console-chat/src/screens/: chat.rs  home.rs  login.rs  mod.rs
console-chat/src/screens/snapshots/: Console_Chat__screens__chat__tests__render_chat.snap  Console_Chat__screens__chat__tests__render_chat_long_msg.snap  Console_Chat__screens__home__tests__render_home.snap  Console_Chat__screens__login__tests__render_home.snap  Console_Chat__screens__login__tests__render_login.snap
console-chat/src/util/: poison_free_mutex.rs  safe_atomic_ptr.rs  take_on_clone.rs
console-chat/src/widgets/: button.rs  input.rs  message_widget.rs  mod.rs  widget_hirarchie.rs
old-console-chat/: .gitignore  Cargo.toml  README.md
old-console-chat2/: Cargo.toml  README.md
tui-chat/: Cargo.toml  LICENSE  README.md
tui-chat-event/: Cargo.toml  (+1 more)
tui-chat/src/: app.rs  event.rs  main.rs  ui.rs
(+98 files in other folders)
