[package]
name = "console-chat"
version = "0.2.1"
edition = "2024"
description = "idk"
authors = ["Thetechnicker <106349149+thetechnicker@users.noreply.github.com>"]
build = "build.rs"

[[example]]
name = "basic_usage"

[[example]]
name = "sse_room"

[workspace]
members = ["openapi"]

[dependencies]
openapi = { path = "./openapi", features=["native-tls"]} 
alkali = "0.3.0"
base64 = "0.22.1"
better-panic = "0.3.0"
bytes = "1.11.0"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.54", features = [
    "derive",
    "cargo",
    "wrap_help",
    "unicode",
    "string",
    "unstable-styles",
] }
color-eyre = "0.6.5"
config = "0.15.19"
crossterm = { version = "0.28.1", features = ["serde", "event-stream"] }
derive_deref = "1.1.1"
directories = "6.0.0"
futures = "0.3.31"
human-panic = "2.0.6"
json5 = "1.3.0"
lazy_static = "1.5.0"
libc = "0.2.179"
pretty_assertions = "1.4.1"
rand = "0.9.2"
ratatui = { version = "0.30.0", features = ["serde", "macros"] }
reqwest = { version = "0.12.28", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }
signal-hook = "0.3.18"
strip-ansi-escapes = "0.2.1"
strum = { version = "0.27.2", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
tokio-stream = "0.1.18"
tokio-util = "0.7.18"
tracing = "0.1.44"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "serde", "json"] }
tui-textarea = "0.7.0"
url = { version = "2.5.8", features = ["serde"] }
uuid = { version = "1.19.0", features = ["serde"] }
futures-util = "0.3.31"
native-tls = { version = "0.2.14" }
reqwest-eventsource = "0.6.0"
tokio-tungstenite = { version = "0.28.0", optional = true, features=["native-tls"]}

[features]
websocket = ["dep:tokio-tungstenite"]

[build-dependencies]
anyhow = "1.0.100"
vergen-gix = { version = "1.0.9", features = ["build", "cargo"] }

[dev-dependencies]
tempfile = "3.24.0"
