[package]
name = "tui-chat"
version = "0.1.0"
description = "Simple Tui Chat"
authors = ["Thetechnicker <106349149+thetechnicker@users.noreply.github.com>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.29.0"
tokio = { version = "1.40.0", features = ["full"] }
color-eyre = "0.6.3"
